k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: steiner
  labels:
    app.kubernetes.io/part-of: steiner
